[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/CheckerBannerButton.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/Star7-Eaowe.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 3
outline_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
font_data = ExtResource( 3 )

[node name="PauseMenu" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0705882, 0.0705882, 0.0705882, 0.501961 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 448.0
margin_top = 260.0
margin_right = 576.0
margin_bottom = 340.0

[node name="ContinueButton" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 38.0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/ContinueButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 1 )
text = "Continue"
align = 1
valign = 1

[node name="SaveButton" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 128.0
margin_bottom = 80.0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/SaveButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 2 )
text = "Save & Quit"
align = 1
valign = 1

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/SaveButton" to="." method="_on_SaveButton_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/SaveButton" to="." method="_on_SaveButton_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
